# STREAMING-OBSERVABILITY-WITH-LLM

./: .env.example  DESIGN.md  DEVELOPMENT.md  DEV_VS_PROD.md  LICENSE  Makefile  QUICKSTART.md  README.md  TROUBLESHOOTING_LEARNINGS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
airflow/: Dockerfile  requirements-airflow.txt
airflow/dags/: data_quality_dag.py  monitoring_dag.py
anomaly_detection/: Dockerfile  detector.py
dashboard/: Dockerfile  app.py
data/: .gitkeep
event_generator/: Dockerfile  generator.py
images/: .gitkeep
llm/: Dockerfile  narrator.py
scripts/: dev_run_services.sh  health_check.sh  init.sh  init_db.py  setup_dev.sh  verify_project.py
spark/: streaming_job.py
