[project]
name = "streaming-observability"
version = "1.0.0"
description = "Production-style streaming observability platform"
requires-python = ">=3.11"
dependencies = [
    "kafka-python==2.0.2",
    "pyspark==3.5.0",
    "duckdb==0.9.2",
    "streamlit==1.29.0",
    "pandas==2.1.4",
    "plotly==5.18.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "apache-airflow==2.8.0",
    "apache-airflow-providers-apache-spark==4.5.0",
    "faker==22.0.0",
    "pytz==2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "ipython>=8.14.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["event_generator*", "anomaly_detection*", "dashboard*", "llm*", "spark*", "airflow*"]
exclude = ["tests*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
